# tunnelize

./: .gitignore  Cargo.toml  NewArchitecture.md  README.md  dt.ts  monitor-test.http  opop.txt  server_test.ts  test-main-old.rs
.github/workflows/: mdbook.yml  release-build.yml  rust.yml
certs/: .gitignore  generate.sh
docs/: book.toml
docs/diagrams/: httpendpoint.mermaid  intro.mermaid
docs/src/: SUMMARY.md  commands.md  introduction.md  monitoring.md  reference.md  setting-up-certificates.md  setting-up-server.md  setting-up-service.md  setting-up-tunnel.md  setup-a-service.md  tunneling.md
docs/src/endpoints/: configuring-encryption.md  http.md  monitoring.md  setting-up-encryption.md  setting-up-endpoint-tls.md  tcp.md  udp.md
src/: client.rs  configuration.rs  init.rs  main.rs  messages.rs  proxy.rs  server.rs  server2.rs  ss.rs  sx.rs  testv2.rs  transport.rs  tunnel.rs
src/common/: address.rs  channel.rs  channel_request.rs  channel_socket.rs  cli.rs  configuration.rs  connection.rs  data_bridge.rs  data_request.rs  encryption.rs  logger.rs  mod.rs  periodic_trigger.rs  protocol_socket.rs  request.rs  tasks.rs  tcp_client.rs  tcp_server.rs  text.rs  transport.rs  udp_client.rs  udp_server.rs  validate.rs  validate_rules.rs
src/common/channel/: mod.rs
src/configuration/: mod.rs
src/data/: client.rs  mod.rs  tunnel.rs
src/http/: client_list.rs  client_resolver.rs  client_server.rs  host_list.rs  http_channel.rs  http_handler.rs  http_protocol.rs  http_server.rs  messages.rs  mod.rs  services.rs  tunnel_client.rs  tunnel_helper.rs  tunnel_list.rs  tunnel_server.rs
src/hub/: hub_channel.rs  messages.rs  mod.rs  requests.rs  services.rs  tunnel_server.rs
src/old/: tls_client.rs
src/old/server/: mod.rs
src/server/: configuration.rs  hub_channel.rs  hub_server.rs  messages.rs  mod.rs  monitoring.rs
src/server/endpoints/: messages.rs  mod.rs
src/server/http/: client_list.rs  http_server.rs  messages.rs  mod.rs  (+1 more)
src/servers/: domain.rs  http.rs
src/tunnel/: client.rs  configuration.rs  http_tunnel.rs  hub_channel.rs  hub_client.rs  hub_server.rs  messages.rs  mod.rs  monitor.rs
testing/: monitor-test.http  tcp_send.ts  tcp_server.ts  udp_client.ts  udp_server.ts
testing/certs/: generate.sh  server.conf
(+94 files in other folders)
