[package]
name = "tunnelize"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
bytes = "1.7.1"
log = "0.4"
env_logger = "0.11.5"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
regex = "1.10.6"
base64 = "0.22.1"
tokio-util = "0.7.12"
tokio-rustls = "0.26"
rustls = "0.23"
rmp-serde = "1.3.0"
sysinfo = "0.32.0"
rustls-native-certs = "0.8.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.1", features = ["cors"] }
