[package]
name = "tunnelize"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
bytes = "1.10"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }
regex = "1.11"
base64 = "0.22.1"
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = "0.23"
rmp-serde = "1.3.0"
sysinfo = "0.37"
rustls-native-certs = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
