[package]
name = "tunnelize"
version = "1.0.0"
edition = "2024"

[lints.clippy]
from_over_into = "allow"
match_like_matches_macro = "allow"

[dependencies]
axum = "0.8"
chrono = "0.4"
aws-lc-rs = "1.16"
aws-lc-sys = "0.39.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
bytes = "1.11.1"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
uuid = { version = "1.18", features = ["v4", "serde"] }
regex = "1.11"
base64 = "0.22.1"
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = "0.23.31"
rmp-serde = "1.3.0"
sysinfo = "0.38.4"
rustls-native-certs = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
